--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ Linux</a>: da allora quel progetto nato come hobby è diventato uno dei sistemi 
 <h2>Linux: come è nato</h2>
 
 <p>
+<div class="block">
 Tutto iniziò come un semplice hobby, dall'esigenza di Torvalds di trovare un sistema operativo simile a Unix per il suo nuovo PC basato su 386 a 32 bit. A quel tempo, veniva utilizzato per la maggiore il sistema Minix. in sistema basato su un'architettura a microkernel che era stato progettato come una versione minimale di Unix per PC IBM e computer IBM PC/AT. Neanche un mese dopo il suo annuncio, Torvalds rilasciò il primo kernel Linux versione 0.01.
-</p>
+</p></div>
 
 <h2>La storia di Linux: le tappe</h2>
-<img src="images/linux.jpg" width="50%">
+<div class="block"><img src="images/linux.jpg" width="50%"> </div>
 <p>
     La <a
     href="https://it.wikiversity.org/wiki/Storia_di_Linux">storia
