--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Il 17 settembre 1991, Torvalds rilasciò la prima <a
 href="https://en.wikipedia.org/wiki/Linux_kernel">kernel
 Linux</a>: da allora quel progetto nato come hobby è diventato uno dei sistemi operativi open source più utilizzati, soprattutto tra gli sviluppatori ma anche in molte aziende. Dopo 30 anni, Linux ne ha fatta di strada: dopo essere rilasciato come software libero sotto licenza GNUv2, oggi viene utilizzato per PC, server, smartphone, smart speaker e persino per i software per le automobili.
 </p>
+
 </div>
 
 <h2>Linux: come è nato</h2>
@@ -25,7 +26,7 @@ Tutto iniziò come un semplice hobby, dall'esigenza di Torvalds di trovare un si
 </p></div>
 
 <h2>La storia di Linux: le tappe</h2>
-<div class="block"><img src="images/linux.jpg" width="50%"> </div>
+<div class="block"><img src="images/linux.jpg" width="50%"> 
 <p>
     La <a
     href="https://it.wikiversity.org/wiki/Storia_di_Linux">storia
@@ -43,3 +44,10 @@ Tutto iniziò come un semplice hobby, dall'esigenza di Torvalds di trovare un si
 <li>2007: Google annuncia Android, un sistema operativo mobile che esegue un kernel Linux modificato</li>
 <li>2021: Linux atterra su Marte come parte dell'elicottero Ingenuity sul rover Perseverance.</li>
 </ul>
+</div>
+
+
+
+
+
+
